@@ -14,6 +14,9 @@ NEW FEATURES
 
 BUG FIXES
 
+    o   Fixed inheritance for packages importing data.table, bug
+        #1093. Thanks to Koert Kuipers for reporting.
+
 NOTES
 
 
